methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:35: error: not found: value Direction
            setDirection(Direction.EAST)
                         ^